# nexus-django4.2

./: .travis.yml  HISTORY.rst  README.rst  pyproject.toml  pytest.ini  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
nexus/: __init__.py  apps.py  checks.py  compat.py  conf.py  modules.py  sites.py
nexus/templates/nexus/: base.html
nexus/templatetags/: nexus_helpers.py
tests/: urls.py
tests/settings/: base.py  dev.py  test.py
tests/testapp/: nexus_modules.py  test_checks.py  test_conf.py  test_views.py
tests/testapp/management/commands/: runserver.py
tests/testapp/templatetags/: test_nexus_helpers.py
