[flake8]
max-line-length = 120
exclude =
    .git
    __pycache__
    */migrations/*
    env
    .tox

[isort]
include_trailing_comma = True
known_first_party = nexus,testapp
known_third_party = django
line_length = 120
multi_line_output = 5
profile = black
honor_noqa = true


[metadata]
license_file = LICENSE
